www/versioned_docs/version-6.11.0/API/modules.md
---
id: 'modules'
title: 'Starknet.js API - v7.0.0'
sidebar_label: 'Exports'
sidebar_position: 0.5
custom_edit_url: null
---

## Namespaces

- [types](namespaces/types.md)
- [constants](namespaces/constants.md)
- [encode](namespaces/encode.md)
- [hash](namespaces/hash.md)
- [v3hash](namespaces/v3hash.md)
- [v2hash](namespaces/v2hash.md)
- [json](namespaces/json.md)
- [num](namespaces/num.md)
- [transaction](namespaces/transaction.md)
- [stark](namespaces/stark.md)
- [eth](namespaces/eth.md)
- [merkle](namespaces/merkle.md)
- [uint256](namespaces/uint256.md)
- [shortString](namespaces/shortString.md)
- [typedData](namespaces/typedData.md)
- [ec](namespaces/ec.md)
- [starknetId](namespaces/starknetId.md)
- [provider](namespaces/provider-1.md)
- [selector](namespaces/selector.md)
- [events](namespaces/events.md)
- [wallet](namespaces/wallet.md)
- [RPC06](namespaces/RPC06.md)
- [RPC07](namespaces/RPC07.md)
- [cairo](namespaces/cairo.md)
- [byteArray](namespaces/byteArray.md)

## Enumerations

- [CairoOptionVariant](enums/CairoOptionVariant.md)
- [CairoResultVariant](enums/CairoResultVariant.md)

## Classes

- [WalletAccount](classes/WalletAccount.md)
- [Account](classes/Account.md)
- [AccountInterface](classes/AccountInterface.md)
- [Contract](classes/Contract.md)
- [ContractInterface](classes/ContractInterface.md)
- [ContractFactory](classes/ContractFactory.md)
- [Provider](classes/Provider.md)
- [CustomError](classes/CustomError.md)
- [LibraryError](classes/LibraryError.md)
- [GatewayError](classes/GatewayError.md)
- [HttpError](classes/HttpError.md)
- [ProviderInterface](classes/ProviderInterface.md)
- [SignerInterface](classes/SignerInterface.md)
- [Signer](classes/Signer.md)
- [EthSigner](classes/EthSigner.md)
- [ResponseParser](classes/ResponseParser.md)
- [RPCResponseParser](classes/RPCResponseParser.md)
- [CairoUint256](classes/CairoUint256.md)
- [CairoUint512](classes/CairoUint512.md)
- [CallData](classes/CallData.md)
- [CairoCustomEnum](classes/CairoCustomEnum.md)
- [CairoOption](classes/CairoOption.md)
- [CairoResult](classes/CairoResult.md)
- [ReceiptTx](classes/ReceiptTx.md)

## References

### RpcProvider

Renames and re-exports [Provider](classes/Provider.md)

---

### RpcChannel

Re-exports [RpcChannel](classes/RPC07.RpcChannel.md)

---

### RPC

Re-exports [RPC](namespaces/types.RPC.md)

---

### EstimateFee

Re-exports [EstimateFee](interfaces/types.EstimateFee.md)

---

### EstimateFeeBulk

Re-exports [EstimateFeeBulk](namespaces/types.md#estimatefeebulk)

---

### AccountInvocationsFactoryDetails

Re-exports [AccountInvocationsFactoryDetails](namespaces/types.md#accountinvocationsfactorydetails)

---

### UniversalDetails

Re-exports [UniversalDetails](interfaces/types.UniversalDetails.md)

---

### EstimateFeeDetails

Re-exports [EstimateFeeDetails](interfaces/types.EstimateFeeDetails.md)

---

### DeployContractResponse

Re-exports [DeployContractResponse](interfaces/types.DeployContractResponse.md)

---

### MultiDeployContractResponse

Re-exports [MultiDeployContractResponse](namespaces/types.md#multideploycontractresponse)

---

### DeployContractUDCResponse

Re-exports [DeployContractUDCResponse](namespaces/types.md#deploycontractudcresponse)

---

### DeclareDeployUDCResponse

Re-exports [DeclareDeployUDCResponse](namespaces/types.md#declaredeployudcresponse)

---

### SimulateTransactionDetails

Re-exports [SimulateTransactionDetails](namespaces/types.md#simulatetransactiondetails)

---

### EstimateFeeAction

Re-exports [EstimateFeeAction](namespaces/types.md#estimatefeeaction)

---

### StarkProfile

Re-exports [StarkProfile](namespaces/types.md#starkprofile)

---

### ValidateType

Re-exports [ValidateType](enums/types.ValidateType.md)

---

### Uint

Re-exports [Uint](enums/types.Uint.md)

---

### Literal

Re-exports [Literal](enums/types.Literal.md)

---

### AsyncContractFunction

Re-exports [AsyncContractFunction](namespaces/types.md#asynccontractfunction)

---

### ContractFunction

Re-exports [ContractFunction](namespaces/types.md#contractfunction)

---

### Result

Re-exports [Result](namespaces/types.md#result)

---

### ArgsOrCalldata

Re-exports [ArgsOrCalldata](namespaces/types.md#argsorcalldata)

---

### ArgsOrCalldataWithOptions

Re-exports [ArgsOrCalldataWithOptions](namespaces/types.md#argsorcalldatawithoptions)

---

### ContractOptions

Re-exports [ContractOptions](namespaces/types.md#contractoptions)

---

### CallOptions

Re-exports [CallOptions](namespaces/types.md#calloptions)

---

### InvokeOptions

Re-exports [InvokeOptions](namespaces/types.md#invokeoptions)

---

### ParsedEvent

Re-exports [ParsedEvent](namespaces/types.md#parsedevent)

---

### ParsedEvents

Re-exports [ParsedEvents](namespaces/types.md#parsedevents)

---

### WeierstrassSignatureType

Re-exports [WeierstrassSignatureType](namespaces/types.md#weierstrasssignaturetype)

---

### ArraySignatureType

Re-exports [ArraySignatureType](namespaces/types.md#arraysignaturetype)

---

### Signature

Re-exports [Signature](namespaces/types.md#signature)

---

### BigNumberish

Re-exports [BigNumberish](namespaces/types.md#bignumberish)

---

### ByteArray

Re-exports [ByteArray](namespaces/types.md#bytearray)

---

### Calldata

Re-exports [Calldata](namespaces/types.md#calldata)

---

### Uint256

Re-exports [Uint256](interfaces/types.Uint256.md)

---

### Uint512

Re-exports [Uint512](interfaces/types.Uint512.md)

---

### RawCalldata

Re-exports [RawCalldata](namespaces/types.md#rawcalldata)

---

### HexCalldata

Re-exports [HexCalldata](namespaces/types.md#hexcalldata)

---

### AllowArray

Re-exports [AllowArray](namespaces/types.md#allowarray)

---

### OptionalPayload

Re-exports [OptionalPayload](namespaces/types.md#optionalpayload)

---

### RawArgs

Re-exports [RawArgs](namespaces/types.md#rawargs)

---

### RawArgsObject

Re-exports [RawArgsObject](namespaces/types.md#rawargsobject)

---

### RawArgsArray

Re-exports [RawArgsArray](namespaces/types.md#rawargsarray)

---

### MultiType

Re-exports [MultiType](namespaces/types.md#multitype)

---

### UniversalDeployerContractPayload

Re-exports [UniversalDeployerContractPayload](namespaces/types.md#universaldeployercontractpayload)

---

### DeployAccountContractPayload

Re-exports [DeployAccountContractPayload](namespaces/types.md#deployaccountcontractpayload)

---

### DeployAccountContractTransaction

Re-exports [DeployAccountContractTransaction](namespaces/types.md#deployaccountcontracttransaction)

---

### DeclareContractPayload

Re-exports [DeclareContractPayload](namespaces/types.md#declarecontractpayload)

---

### CompleteDeclareContractPayload

Re-exports [CompleteDeclareContractPayload](namespaces/types.md#completedeclarecontractpayload)

---

### DeclareAndDeployContractPayload

Re-exports [DeclareAndDeployContractPayload](namespaces/types.md#declareanddeploycontractpayload)

---

### DeclareContractTransaction

Re-exports [DeclareContractTransaction](namespaces/types.md#declarecontracttransaction)

---

### CallDetails

Re-exports [CallDetails](namespaces/types.md#calldetails)

---

### Invocation

Re-exports [Invocation](namespaces/types.md#invocation)

---

### Call

Re-exports [Call](namespaces/types.md#call)

---

### CairoVersion

Re-exports [CairoVersion](namespaces/types.md#cairoversion)

---

### CompilerVersion

Re-exports [CompilerVersion](namespaces/types.md#compilerversion)

---

### InvocationsDetails

Re-exports [InvocationsDetails](namespaces/types.md#invocationsdetails)

---

### V3TransactionDetails

Re-exports [V3TransactionDetails](namespaces/types.md#v3transactiondetails)

---

### Details

Re-exports [Details](namespaces/types.md#details)

---

### InvocationsDetailsWithNonce

Re-exports [InvocationsDetailsWithNonce](namespaces/types.md#invocationsdetailswithnonce)

---

### TransactionType

Re-exports [TransactionType](enums/types.TransactionType.md)

---

### TransactionStatus

Re-exports [TransactionStatus](enums/types.TransactionStatus.md)

---

### TransactionFinalityStatus

Re-exports [TransactionFinalityStatus](enums/types.TransactionFinalityStatus.md)

---

### TransactionExecutionStatus

Re-exports [TransactionExecutionStatus](enums/types.TransactionExecutionStatus.md)

---

### BlockStatus

Re-exports [BlockStatus](enums/types.BlockStatus.md)

---

### BlockTag

Re-exports [BlockTag](enums/types.BlockTag.md)

---

### BlockNumber

Re-exports [BlockNumber](namespaces/types.md#blocknumber)

---

### BlockIdentifier

Re-exports [BlockIdentifier](namespaces/types.md#blockidentifier)

---

### AccountInvocationItem

Re-exports [AccountInvocationItem](namespaces/types.md#accountinvocationitem)

---

### AccountInvocations

Re-exports [AccountInvocations](namespaces/types.md#accountinvocations)

---

### Invocations

Re-exports [Invocations](namespaces/types.md#invocations)

---

### Tupled

Re-exports [Tupled](namespaces/types.md#tupled)

---

### Args

Re-exports [Args](namespaces/types.md#args)

---

### ParsedStruct

Re-exports [ParsedStruct](namespaces/types.md#parsedstruct)

---

### waitForTransactionOptions

Re-exports [waitForTransactionOptions](namespaces/types.md#waitfortransactionoptions)

---

### getSimulateTransactionOptions

Re-exports [getSimulateTransactionOptions](namespaces/types.md#getsimulatetransactionoptions)

---

### getContractVersionOptions

Re-exports [getContractVersionOptions](namespaces/types.md#getcontractversionoptions)

---

### getEstimateFeeBulkOptions

Re-exports [getEstimateFeeBulkOptions](namespaces/types.md#getestimatefeebulkoptions)

---

### CallStruct

Re-exports [CallStruct](interfaces/types.CallStruct.md)

---

### ContractVersion

Re-exports [ContractVersion](namespaces/types.md#contractversion)

---

### ContractClass

Re-exports [ContractClass](namespaces/types.md#contractclass)

---

### CompiledContract

Re-exports [CompiledContract](namespaces/types.md#compiledcontract)

---

### CairoContract

Re-exports [CairoContract](namespaces/types.md#cairocontract)

---

### EntryPointType

Re-exports [EntryPointType](enums/types.EntryPointType.md)

---

### Abi

Re-exports [Abi](namespaces/types.md#abi)

---

### AbiEntry

Re-exports [AbiEntry](namespaces/types.md#abientry)

---

### EventEntry

Re-exports [EventEntry](namespaces/types.md#evententry)

---

### FunctionAbi

Re-exports [FunctionAbi](namespaces/types.md#functionabi)

---

### AbiStructs

Re-exports [AbiStructs](namespaces/types.md#abistructs)

---

### AbiStruct

Re-exports [AbiStruct](namespaces/types.md#abistruct)

---

### AbiInterfaces

Re-exports [AbiInterfaces](namespaces/types.md#abiinterfaces)

---

### InterfaceAbi

Re-exports [InterfaceAbi](namespaces/types.md#interfaceabi)

---

### AbiEnums

Re-exports [AbiEnums](namespaces/types.md#abienums)

---

### AbiEnum

Re-exports [AbiEnum](namespaces/types.md#abienum)

---

### AbiEvents

Re-exports [AbiEvents](namespaces/types.md#abievents)

---

### AbiEvent

Re-exports [AbiEvent](namespaces/types.md#abievent)

---

### CairoEvent

Re-exports [CairoEvent](namespaces/types.md#cairoevent)

---

### CairoEventDefinition

Re-exports [CairoEventDefinition](namespaces/types.md#cairoeventdefinition)

---

### CairoEventVariant

Re-exports [CairoEventVariant](namespaces/types.md#cairoeventvariant)

---

### LegacyEvent

Re-exports [LegacyEvent](namespaces/types.md#legacyevent)

---

### LegacyContractClass

Re-exports [LegacyContractClass](namespaces/types.md#legacycontractclass)

---

### LegacyCompiledContract

Re-exports [LegacyCompiledContract](namespaces/types.md#legacycompiledcontract)

---

### Builtins

Re-exports [Builtins](namespaces/types.md#builtins)

---

### CompressedProgram

Re-exports [CompressedProgram](namespaces/types.md#compressedprogram)

---

### EntryPointsByType

Re-exports [EntryPointsByType](namespaces/types.md#entrypointsbytype)

---

### ContractEntryPointFields

Re-exports [ContractEntryPointFields](namespaces/types.md#contractentrypointfields)

---

### Program

Re-exports [Program](interfaces/types.Program.md)

---

### CairoAssembly

Re-exports [CairoAssembly](namespaces/types.md#cairoassembly)

---

### CompiledSierra

Re-exports [CompiledSierra](namespaces/types.md#compiledsierra)

---

### SierraContractClass

Re-exports [SierraContractClass](namespaces/types.md#sierracontractclass)

---

### CompiledSierraCasm

Re-exports [CompiledSierraCasm](namespaces/types.md#compiledsierracasm)

---

### ByteCode

Re-exports [ByteCode](namespaces/types.md#bytecode)

---

### PythonicHints

Re-exports [PythonicHints](namespaces/types.md#pythonichints)

---

### SierraProgramDebugInfo

Re-exports [SierraProgramDebugInfo](namespaces/types.md#sierraprogramdebuginfo)

---

### SierraEntryPointsByType

Re-exports [SierraEntryPointsByType](namespaces/types.md#sierraentrypointsbytype)

---

### SierraContractEntryPointFields

Re-exports [SierraContractEntryPointFields](namespaces/types.md#sierracontractentrypointfields)

---

### ProviderOptions

Re-exports [ProviderOptions](interfaces/types.ProviderOptions.md)

---

### RpcProviderOptions

Re-exports [RpcProviderOptions](namespaces/types.md#rpcprovideroptions)

---

### BlockWithTxHashes

Re-exports [BlockWithTxHashes](namespaces/types.md#blockwithtxhashes)

---

### ContractClassPayload

Re-exports [ContractClassPayload](namespaces/types.md#contractclasspayload)

---

### FeeEstimate

Re-exports [FeeEstimate](namespaces/types.md#feeestimate)

---

### TransactionReceipt

Re-exports [TransactionReceipt](namespaces/types.md#transactionreceipt)

---

### GetBlockResponse

Re-exports [GetBlockResponse](namespaces/types.md#getblockresponse)

---

### PendingBlock

Re-exports [PendingBlock](namespaces/types.md#pendingblock)

---

### Block

Re-exports [Block](namespaces/types.md#block)

---

### MessageToL1

Re-exports [MessageToL1](interfaces/types.MessageToL1.md)

---

### RevertedTransactionReceiptResponse

Re-exports [RevertedTransactionReceiptResponse](namespaces/types.md#revertedtransactionreceiptresponse)

---

### RejectedTransactionReceiptResponse

Re-exports [RejectedTransactionReceiptResponse](namespaces/types.md#rejectedtransactionreceiptresponse)

---

### GetTxReceiptResponseWithoutHelper

Re-exports [GetTxReceiptResponseWithoutHelper](namespaces/types.md#gettxreceiptresponsewithouthelper)

---

### SuccessfulTransactionReceiptResponse

Re-exports [SuccessfulTransactionReceiptResponse](namespaces/types.md#successfultransactionreceiptresponse)

---

### GetTransactionResponse

Re-exports [GetTransactionResponse](namespaces/types.md#gettransactionresponse)

---

### InvokeTransactionReceiptResponse

Re-exports [InvokeTransactionReceiptResponse](namespaces/types.md#invoketransactionreceiptresponse)

---

### DeclareTransactionReceiptResponse

Re-exports [DeclareTransactionReceiptResponse](namespaces/types.md#declaretransactionreceiptresponse)

---

### DeployTransactionReceiptResponse

Re-exports [DeployTransactionReceiptResponse](namespaces/types.md#deploytransactionreceiptresponse)

---

### DeployAccountTransactionReceiptResponse

Re-exports [DeployAccountTransactionReceiptResponse](namespaces/types.md#deployaccounttransactionreceiptresponse)

---

### L1HandlerTransactionReceiptResponse

Re-exports [L1HandlerTransactionReceiptResponse](namespaces/types.md#l1handlertransactionreceiptresponse)

---

### EstimateFeeResponse

Re-exports [EstimateFeeResponse](interfaces/types.EstimateFeeResponse.md)

---

### EstimateFeeResponseBulk

Re-exports [EstimateFeeResponseBulk](namespaces/types.md#estimatefeeresponsebulk)

---

### InvokeFunctionResponse

Re-exports [InvokeFunctionResponse](namespaces/types.md#invokefunctionresponse)

---

### DeclareContractResponse

Re-exports [DeclareContractResponse](namespaces/types.md#declarecontractresponse)

---

### CallContractResponse

Re-exports [CallContractResponse](namespaces/types.md#callcontractresponse)

---

### Storage

Re-exports [Storage](namespaces/types.md#storage)

---

### Nonce

Re-exports [Nonce](namespaces/types.md#nonce)

---

### SIMULATION_FLAG

Re-exports [SIMULATION_FLAG](namespaces/types.md#simulation_flag)

---

### SimulationFlags

Re-exports [SimulationFlags](namespaces/types.md#simulationflags)

---

### SimulatedTransaction

Re-exports [SimulatedTransaction](namespaces/types.md#simulatedtransaction)

---

### SimulateTransactionResponse

Re-exports [SimulateTransactionResponse](namespaces/types.md#simulatetransactionresponse)

---

### StateUpdateResponse

Re-exports [StateUpdateResponse](namespaces/types.md#stateupdateresponse)

---

### StateUpdate

Re-exports [StateUpdate](namespaces/types.md#stateupdate)

---

### PendingStateUpdate

Re-exports [PendingStateUpdate](namespaces/types.md#pendingstateupdate)

---

### ContractClassResponse

Re-exports [ContractClassResponse](namespaces/types.md#contractclassresponse)

---

### InvocationsSignerDetails

Re-exports [InvocationsSignerDetails](namespaces/types.md#invocationssignerdetails)

---

### V2InvocationsSignerDetails

Re-exports [V2InvocationsSignerDetails](namespaces/types.md#v2invocationssignerdetails)

---

### V3InvocationsSignerDetails

Re-exports [V3InvocationsSignerDetails](namespaces/types.md#v3invocationssignerdetails)

---

### DeclareSignerDetails

Re-exports [DeclareSignerDetails](namespaces/types.md#declaresignerdetails)

---

### V2DeclareSignerDetails

Re-exports [V2DeclareSignerDetails](namespaces/types.md#v2declaresignerdetails)

---

### V3DeclareSignerDetails

Re-exports [V3DeclareSignerDetails](namespaces/types.md#v3declaresignerdetails)

---

### DeployAccountSignerDetails

Re-exports [DeployAccountSignerDetails](namespaces/types.md#deployaccountsignerdetails)

---

### V2DeployAccountSignerDetails

Re-exports [V2DeployAccountSignerDetails](namespaces/types.md#v2deployaccountsignerdetails)

---

### V3DeployAccountSignerDetails

Re-exports [V3DeployAccountSignerDetails](namespaces/types.md#v3deployaccountsignerdetails)

---

### TypedDataRevision

Re-exports [TypedDataRevision](namespaces/types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)

---

### StarknetEnumType

Re-exports [StarknetEnumType](namespaces/types.RPC.RPCSPEC07.WALLET_API.md#starknetenumtype)

---

### StarknetMerkleType

Re-exports [StarknetMerkleType](namespaces/types.RPC.RPCSPEC07.WALLET_API.md#starknetmerkletype)

---

### StarknetType

Re-exports [StarknetType](namespaces/types.RPC.RPCSPEC07.WALLET_API.md#starknettype)

---

### StarknetDomain

Re-exports [StarknetDomain](interfaces/types.RPC.RPCSPEC07.WALLET_API.StarknetDomain.md)

---

### TypedData

Re-exports [TypedData](interfaces/types.RPC.RPCSPEC07.WALLET_API.TypedData.md)

---

### CairoEnum

Re-exports [CairoEnum](namespaces/types.md#cairoenum)

---

### TransactionStatusReceiptSets

Re-exports [TransactionStatusReceiptSets](namespaces/types.md#transactionstatusreceiptsets)

---

### TransactionReceiptStatus

Re-exports [TransactionReceiptStatus](namespaces/types.md#transactionreceiptstatus)

---

### TransactionReceiptValue

Re-exports [TransactionReceiptValue](namespaces/types.md#transactionreceiptvalue)

---

### TransactionReceiptCallbacksDefined

Re-exports [TransactionReceiptCallbacksDefined](namespaces/types.md#transactionreceiptcallbacksdefined)

---

### TransactionReceiptCallbacksDefault

Re-exports [TransactionReceiptCallbacksDefault](namespaces/types.md#transactionreceiptcallbacksdefault)

---

### TransactionReceiptCallbacks

Re-exports [TransactionReceiptCallbacks](namespaces/types.md#transactionreceiptcallbacks)

---

### TransactionReceiptUtilityInterface

Re-exports [TransactionReceiptUtilityInterface](namespaces/types.md#transactionreceiptutilityinterface)

---

### UINT_128_MAX

Re-exports [UINT_128_MAX](namespaces/uint256.md#uint_128_max)

---

### UINT_256_MAX

Re-exports [UINT_256_MAX](namespaces/uint256.md#uint_256_max)

## Type Aliases

### TypedContractV2

Ƭ **TypedContractV2**<`TAbi`\>: `AbiWanTypedContract`<`TAbi`\> & [`Contract`](classes/Contract.md)

#### Type parameters

| Name   | Type                |
| :----- | :------------------ |
| `TAbi` | extends `AbiKanabi` |

#### Defined in

[src/contract/default.ts:35](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/contract/default.ts#L35)

---

### ContractFactoryParams

Ƭ **ContractFactoryParams**: `Object`

#### Type declaration

| Name                 | Type                                                       |
| :------------------- | :--------------------------------------------------------- |
| `compiledContract`   | [`CompiledContract`](namespaces/types.md#compiledcontract) |
| `account`            | `any`                                                      |
| `casm?`              | [`CairoAssembly`](namespaces/types.md#cairoassembly)       |
| `classHash?`         | `string`                                                   |
| `compiledClassHash?` | `string`                                                   |
| `abi?`               | [`Abi`](namespaces/types.md#abi)                           |

#### Defined in

[src/contract/contractFactory.ts:13](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/contract/contractFactory.ts#L13)

---

### CairoEnumRaw

Ƭ **CairoEnumRaw**: `Object`

#### Index signature

▪ [key: `string`]: `any`

#### Defined in

[src/utils/calldata/enum/CairoCustomEnum.ts:1](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/calldata/enum/CairoCustomEnum.ts#L1)

---

### GetTransactionReceiptResponse

Ƭ **GetTransactionReceiptResponse**: [`GetTxReceiptResponseWithoutHelper`](namespaces/types.md#gettxreceiptresponsewithouthelper) & [`ReceiptTx`](classes/ReceiptTx.md)

#### Defined in

[src/utils/transactionReceipt.ts:114](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/transactionReceipt.ts#L114)

## Variables

### number

• `Const` **number**: [`num`](namespaces/num.md) = `num`

**`Deprecated`**

prefer the 'num' naming

#### Defined in

[src/index.ts:55](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/index.ts#L55)

---

### defaultProvider

• `Const` **defaultProvider**: `RpcProvider`

#### Defined in

[src/provider/index.ts:8](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/provider/index.ts#L8)

---

### UINT_256_MIN

• `Const` **UINT_256_MIN**: `0n`

#### Defined in

[src/utils/cairoDataTypes/uint256.ts:12](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint256.ts#L12)

---

### UINT_256_LOW_MAX

• `Const` **UINT_256_LOW_MAX**: `340282366920938463463374607431768211455n`

#### Defined in

[src/utils/cairoDataTypes/uint256.ts:13](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint256.ts#L13)

---

### UINT_256_HIGH_MAX

• `Const` **UINT_256_HIGH_MAX**: `340282366920938463463374607431768211455n`

#### Defined in

[src/utils/cairoDataTypes/uint256.ts:14](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint256.ts#L14)

---

### UINT_256_LOW_MIN

• `Const` **UINT_256_LOW_MIN**: `0n`

#### Defined in

[src/utils/cairoDataTypes/uint256.ts:15](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint256.ts#L15)

---

### UINT_256_HIGH_MIN

• `Const` **UINT_256_HIGH_MIN**: `0n`

#### Defined in

[src/utils/cairoDataTypes/uint256.ts:16](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint256.ts#L16)

---

### UINT_512_MAX

• `Const` **UINT_512_MAX**: `bigint`

#### Defined in

[src/utils/cairoDataTypes/uint512.ts:11](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint512.ts#L11)

---

### UINT_512_MIN

• `Const` **UINT_512_MIN**: `0n`

#### Defined in

[src/utils/cairoDataTypes/uint512.ts:12](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint512.ts#L12)

---

### UINT_128_MIN

• `Const` **UINT_128_MIN**: `0n`

#### Defined in

[src/utils/cairoDataTypes/uint512.ts:13](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/cairoDataTypes/uint512.ts#L13)

## Functions

### getCalldata

▸ **getCalldata**(`args`, `callback`): [`Calldata`](namespaces/types.md#calldata)

#### Parameters

| Name       | Type                                     |
| :--------- | :--------------------------------------- |
| `args`     | [`RawArgs`](namespaces/types.md#rawargs) |
| `callback` | `Function`                               |

#### Returns

[`Calldata`](namespaces/types.md#calldata)

#### Defined in

[src/contract/default.ts:110](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/contract/default.ts#L110)

---

### splitArgsAndOptions

▸ **splitArgsAndOptions**(`args`): \{ `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options`: [`ContractOptions`](namespaces/types.md#contractoptions) } \| \{ `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options?`: `undefined` }

#### Parameters

| Name   | Type                                                                         |
| :----- | :--------------------------------------------------------------------------- |
| `args` | [`ArgsOrCalldataWithOptions`](namespaces/types.md#argsorcalldatawithoptions) |

#### Returns

\{ `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options`: [`ContractOptions`](namespaces/types.md#contractoptions) } \| \{ `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options?`: `undefined` }

#### Defined in

[src/contract/default.ts:37](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/contract/default.ts#L37)

---

### fixStack

▸ **fixStack**(`target`, `fn?`): `void`

#### Parameters

| Name     | Type       | Default value        |
| :------- | :--------- | :------------------- |
| `target` | `Error`    | `undefined`          |
| `fn`     | `Function` | `target.constructor` |

#### Returns

`void`

#### Defined in

[src/provider/errors.ts:2](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/provider/errors.ts#L2)

---

### fixProto

▸ **fixProto**(`target`, `prototype`): `void`

#### Parameters

| Name        | Type     |
| :---------- | :------- |
| `target`    | `Error`  |
| `prototype` | `Object` |

#### Returns

`void`

#### Defined in

[src/provider/errors.ts:8](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/provider/errors.ts#L8)

---

### addAddressPadding

▸ **addAddressPadding**(`address`): `string`

Format a hex number to '0x' and 64 characters, adding leading zeros if necessary.

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

Hex string : 0x followed by 64 characters. No upper case characters in the response.

**`Example`**

```typescript
const address = '0x90591d9fa3efc87067d95a643f8455e0b8190eb8cb7bfd39e4fb7571fdf';
const result = addAddressPadding(address);
// result = "0x0000090591d9fa3efc87067d95a643f8455e0b8190eb8cb7bfd39e4fb7571fdf"
```

#### Defined in

[src/utils/address.ts:22](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/address.ts#L22)

---

### validateAndParseAddress

▸ **validateAndParseAddress**(`address`): `string`

Check the validity of a Starknet address, and format it as a hex number : '0x' and 64 characters, adding leading zeros if necessary.

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

Hex string : 0x followed by 64 characters. No upper case characters in the response.

**`Throws`**

address argument must be a valid address inside the address range bound

**`Example`**

```typescript
const address = '0x90591d9fa3efc87067d95a643f8455e0b8190eb8cb7bfd39e4fb7571fdf';
const result = validateAndParseAddress(address);
// result = "0x0000090591d9fa3efc87067d95a643f8455e0b8190eb8cb7bfd39e4fb7571fdf"
```

#### Defined in

[src/utils/address.ts:41](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/address.ts#L41)

---

### getChecksumAddress

▸ **getChecksumAddress**(`address`): `string`

Convert an address to her checksum representation which uses a specific pattern of uppercase and lowercase letters within
a given address to reduce the risk of errors introduced from typing an address or cut and paste issues.

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

Hex string : 0x followed by 64 characters. Mix of uppercase and lowercase

**`Example`**

```typescript
const address = '0x90591d9fa3efc87067d95a643f8455e0b8190eb8cb7bfd39e4fb7571fdf';
const result = getChecksumAddress(address);
// result = "0x0000090591D9fA3EfC87067d95a643f8455E0b8190eb8Cb7bFd39e4fb7571fDF"
```

#### Defined in

[src/utils/address.ts:66](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/address.ts#L66)

---

### validateChecksumAddress

▸ **validateChecksumAddress**(`address`): `boolean`

If the casing of an address is mixed, it is a Checksum Address, which uses a specific pattern of uppercase and lowercase letters within
a given address to reduce the risk of errors introduced from typing an address or cut and paste issues.

#### Parameters

| Name      | Type     | Description |
| :-------- | :------- | :---------- |
| `address` | `string` | string      |

#### Returns

`boolean`

true if the ChecksumAddress is valid

**`Example`**

```typescript
const address = '0x0000090591D9fA3EfC87067d95a643f8455E0b8190eb8Cb7bFd39e4fb7571fDF';
const result = validateChecksumAddress(address);
// result = true
```

#### Defined in

[src/utils/address.ts:96](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/address.ts#L96)

---

### isUrl

▸ **isUrl**(`s?`): `boolean`

Loosely validate a URL `string`.

#### Parameters

| Name | Type     | Description          |
| :--- | :------- | :------------------- |
| `s?` | `string` | The URL to check for |

#### Returns

`boolean`

`true` if url is valid, `false` otherwise

**`Example`**

````typescript
const s = "https://starknetjs.com/docs";
const result = isUrl(s);
// result == true

#### Defined in

[src/utils/url.ts:28](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/url.ts#L28)

___

### buildUrl

▸ **buildUrl**(`baseUrl`, `defaultPath`, `urlOrPath?`): `string`

Builds a URL using the provided base URL, default path, and optional URL or path.

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `baseUrl` | `string` | The base URL of the URL being built. |
| `defaultPath` | `string` | The default path to use if no URL or path is provided. |
| `urlOrPath?` | `string` | The optional URL or path to append to the base URL. |

#### Returns

`string`

The built URL.

**`Example`**

```typescript
const baseUrl = "https://starknetjs.com";
const defaultPath = "/";
const urlOrPath = "/docs";
const result = buildUrl(baseUrl, defaultPath, urlOrPath);

result = "https://starknetjs.com/docs"

#### Defined in

[src/utils/url.ts:73](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/url.ts#L73)

___

### parseCalldataField

▸ **parseCalldataField**(`argsIterator`, `input`, `structs`, `enums`): `string` \| `string`[]

Parse one field of the calldata by using input field from the abi for that method

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `argsIterator` | `Iterator`<`any`, `any`, `undefined`\> | Iterator for value of the field |
| `input` | [`AbiEntry`](namespaces/types.md#abientry) | input(field) information from the abi that will be used to parse the data |
| `structs` | [`AbiStructs`](namespaces/types.md#abistructs) | structs from abi |
| `enums` | [`AbiEnums`](namespaces/types.md#abienums) | enums from abi |

#### Returns

`string` \| `string`[]

- parsed arguments in format that contract is expecting

#### Defined in

[src/utils/calldata/requestParser.ts:284](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/calldata/requestParser.ts#L284)

___

### isSierra

▸ **isSierra**(`contract`): contract is CompiledSierra \| SierraContractClass

Checks if a given contract is in Sierra (Safe Intermediate Representation) format.

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `contract` | `string` \| [`CairoContract`](namespaces/types.md#cairocontract) | The contract to check. Can be either a CairoContract object or a string representation of the contract. |

#### Returns

contract is CompiledSierra \| SierraContractClass

- Returns true if the contract is a Sierra contract, otherwise false.

**`Example`**

```typescript
const result = isSierra(contract);
// result = true | false
````

#### Defined in

[src/utils/contract.ts:27](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/contract.ts#L27)

---

### extractContractHashes

▸ **extractContractHashes**(`payload`): [`CompleteDeclareContractPayload`](namespaces/types.md#completedeclarecontractpayload)

Extracts contract hashes from `DeclareContractPayload`.

#### Parameters

| Name      | Type                                                                   | Description                                  |
| :-------- | :--------------------------------------------------------------------- | :------------------------------------------- |
| `payload` | [`DeclareContractPayload`](namespaces/types.md#declarecontractpayload) | The payload containing contract information. |

#### Returns

[`CompleteDeclareContractPayload`](namespaces/types.md#completedeclarecontractpayload)

- The `CompleteDeclareContractPayload` with extracted contract hashes.

**`Throws`**

- If extraction of compiledClassHash or classHash fails.

**`Example`**

```typescript
const result = extractContractHashes(contract);
// result = {
//   contract: ...,
//   classHash: ...,
//   casm: ...,
//   compiledClassHash: ...,
// }
```

#### Defined in

[src/utils/contract.ts:51](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/contract.ts#L51)

---

### contractClassResponseToLegacyCompiledContract

▸ **contractClassResponseToLegacyCompiledContract**(`ccr`): [`LegacyCompiledContract`](namespaces/types.md#legacycompiledcontract)

Helper to redeclare response Cairo0 contract

#### Parameters

| Name  | Type                                                                 |
| :---- | :------------------------------------------------------------------- |
| `ccr` | [`ContractClassResponse`](namespaces/types.md#contractclassresponse) |

#### Returns

[`LegacyCompiledContract`](namespaces/types.md#legacycompiledcontract)

#### Defined in

[src/utils/contract.ts:76](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/contract.ts#L76)
